Page Layout - Responsive Update

--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 layout: page
 title: About
 permalink: /about/
-header-pic: kelsey1.jpg
+header-pic: kelsey_header.png
+header-pic-alt: kelsey_header_alt.png
 ---
 
 <p>Hi all! I’m Kelsey Rogers. I’m originally from the Missouri Ozarks, and went to school in a rural area. My middle school received a grant that gave every student access to a computer and our teachers were trained in how to utilize this new technology, and in turn, we had access to a whole new world. This early experience emphasized the power that digital access to cultural heritage resources can have. Even early 2000s cultural heritage institution's' websites gave us inspiring and engaging access to resources we otherwise wouldn't have been exposed to.</p>
@@ -23,5 +24,4 @@ header-pic: kelsey1.jpg
 </div>
 </div>
 
-  <!--<li>Cover Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate XLIV (Illustration). <a href="https://flic.kr/p/e1oHP5">Biodiversity Heritage Library</a></li>
-  <li>Contact Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate VI (Illustration). <a href="https://flic.kr/p/e1oEjb">Biodiversity Heritage Library</a></li>-->
+<p id="about-credit">Header images from: <a href="https://flic.kr/s/aHsjEfMKFJ">Toadstools, mushrooms, fungi, edible and poisonous.</a> Indianapolis, The Bowen-Merrill Company [c1902]. Courtesy of <a href="https://www.flickr.com/people/biodivlibrary/">Biodiversity Heritage Library</a></p>
