--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 layout: page
 title: Contact
 permalink: /contact/
-header-pic: toadstools_n278_w1150.jpg
+header-pic: toadstools_header.png
+header-pic-alt: toadstools_header_alt.png
 ---
 
 <p>Do you have a cultural heritage project you'd like to see come to life?</p>
