MLIS Portfolio and Practicum - Responsive Update

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@ header-pic: toadstools_header.png
 header-pic-alt: toadstools_header_alt.png
 ---
 
-<p>Do you have a cultural heritage project you'd like to see come to life?</p>
+<p>I am particularly interested in creating and supporting digital cultural and natural heritage projects. These online initiatives are essential to providing access to the wonderful resources and collections found all around the world and I would love to create the next generation of engaging and interactive digital library projects.</p>
+<p>Do you have a digital heritage project you'd like to see come to life?</p>
 <p>Send me a message and let's talk!</p>
 
 <div id="contact">
