--- a/mlis/mlis.html
+++ b/mlis/mlis.html
@@ -1,17 +1,30 @@
 ---
-layout: page
-title: MLIS
-permalink: /mlis-old/
-header-pic: ria-puskas-unsplash.jpg
+layout: mlis
+title: MLIS Program
+permalink: /mlis
+header-pic: unsplash_coursework.png
+header-pic-alt: mlis_header.png
 ---
-<h4>Course LIS 60637 - Metadata Architecture and Implementation</h4>
-<p><strong>Course Project:</strong> <a href="{{ "/mlis/metadata/home" | relative_url }}">Secondhand CDs</a></p>
-<p><strong>Course Catalog Description:</strong> Principles and theories of metadata development in the digital environment. Main focus is given to the design and applications of metadata schemas for distinct domains and information communities, issues in metadata interoperability, vocabulary control, quality control and evaluation. Examination of international standards, activities and projects with the use of case study approach.</p>
+<p>I graduated with a Master's in Library and Information Science from Kent State University in May 2020. My focus was on digital libraries, archives and museums, particularly the development and support of digital initiatives. These include everything from applying user needs analyses to the creation and redesign of institutions' websites to developing and implementing collection metadata.</p>
+<div class="mlis-flex">
+<div class="mlis-home">
+  <img class="mlis-home-img" src="{{ 'assets/images/assess_project.png' | relative_url }}">
+  <div class="mlis-project-img-alt" style="background-image: url({{ 'assets/images/user_alt.png' | relative_url }});"></div>
+  <h1><a href="{{ 'mlis/projects' | relative_url }}">Projects</a></h1>
+  <p>Explore the variety of projects that I worked on during my MLIS such as the creation of metadata schemas, a cultural heritage website, and user needs analyses.</p>
+</div>
 
-<h4>Course LIS 60635 - Cultural Heritage Informatics</h4>
-<p><strong>Course Project:</strong> <a href="{{ "/mlis/spadefoot/home" | relative_url }}">Eastern Spadefoot</a></p>
-<p><strong>Course Catalog Description:</strong> Cultural heritage informatics brings a comprehensive, cross-disciplinary approach to supporting the entire lifecycle of cultural heritage information and documentation procedures for the benefit of the preservation, study, and promotion of cultural heritage. The course covers methods of creating descriptions for cultural
-objects, as well as organizing, delivering, and presenting the cultural heritage (tangible, intangible, and digital) resources in the digital age. (Preservation, conservation, and digital imaging are covered by other courses.) The course aims to prepare students for careers focusing on or transcending libraries, archives, museums (LAMs), historical societies, and other cultural institutions by introducing them the methodologies and technologies commonly used in cultural heritage informatics and can be broadly implemented in LAMs.</p>
+<div class="mlis-home">
+  <img class="mlis-home-img" src="{{ 'assets/images/pract_project.png' | relative_url }}">
+  <div class="mlis-project-img-alt" style="background-image: url({{ 'assets/images/pract_alt.png' | relative_url }});"></div>
+  <h1><a href="{{ 'mlis/practicum' | relative_url }}">Practicum</a></h1>
+  <p>This culminating graduate course provides a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections.</p>
+</div>
 
-<div class="page-small-header"></div>
-<p>Header: <a href="https://unsplash.com/photos/OobxlWxuLaA">Ria Puskas</a> on Unsplash</p>
+<div class="mlis-home">
+  <img class="mlis-home-img" src="{{ 'assets/images/memo_project.png' | relative_url }}">
+<div class="mlis-project-img-alt" style="background-image: url({{ 'assets/images/memo_alt.png' | relative_url }});"></div>
+  <h1><a href="{{ 'mlis/coursework' | relative_url }}">Coursework</a></h1>
+  <p>My coursework covered a broad range of digital LAM issues such as Digital Preservation, Metadata Architecture, and Cutlural Heritage Informatics. Explore the full list <a href="{{ 'mlis/coursework' | relative_url }}">here</a>.</p>
+</div>
+</div>
