Spadefoot Project - Responsive Update

--- a/mlis/projects.html
+++ b/mlis/projects.html
@@ -13,7 +13,7 @@ header-pic-alt: projects_alt.png
     <div class="mlis-project-img-alt" style= "background-image: url({{ 'assets/images/chi_alt.png' | relative_url }});"></div>
     <div>
       <p><strong>Class: </strong>LIS 60635: Cultural Heritage Informatics (Fall 2019)</p>
-      <p>The culminating project for Cultural Heritage Informatics was a website showcasing a cultural heritage object utilizing a variety of visualizations and tools such as a timeline and HistoryPin, as well as demonstrating key skills such as applying Cataloging Cultural Objects standards and using controlled vocabularies. I chose one of my favorite illustrations to explore: a naturalistic study of an eastern spadefoot that was published as a hand-colored lithograph in North American herpetology by John Edwards Holbrook (1836).</p>
+      <p>The culminating project for Cultural Heritage Informatics was a website showcasing a cultural heritage object utilizing a variety of visualizations and tools such as a timeline and HistoryPin, as well as demonstrating key skills such as applying Cataloging Cultural Objects standards and using controlled vocabularies. I chose one of my favorite illustrations to explore: a naturalistic study of an eastern spadefoot that was published as a hand-colored lithograph in <em>North American herpetology</em> by John Edwards Holbrook (1836).</p>
       <p><strong><a href="{{ 'mlis/spadefoot/home' | relative_url }}">Full Project Online</a></strong></p>
     </div>
   </div>
