--- a/mlis/spadefoot/home.html
+++ b/mlis/spadefoot/home.html
@@ -3,11 +3,21 @@ layout: spadefoot
 title: Scaphiopus solitarius
 permalink: /mlis/spadefoot/home
 ---
-<div class="spade-home">
-  <div>
-  <img id="spade-top" src="{{ '/mlis/spadefoot/images/holb_smith_01.jpg' | relative_url }}">
+<div id="chi-home">
+
+  <div id="chi-home-top" class="chi-home-image">
+    <img class="chi-home-square" src="{{ 'mlis/spadefoot/images/chi_square_top.png' | relative_url }}">
+    <div class="chi-home-header">a charismatic illustration of an elusive toad gives us a glimpse into 19th century herpetology</div>
   </div>
-  <div class="spade-home-text">
-    <p>The <strong>eastern spadefoot</strong> (formerly <em>Scaphiopus solitarius</em>) is a toad that lives most of its life underground and only comes out at night. This posed a problem in the early years of North American herpetology (the study of amphibians and reptiles), as specimens would have to be captured and illustrated by hand.</p><p>Additionally, herpetology is one of the less popular branches of zoology. Thus, there are only a few depictions of this elusive animal published before photography was regularly used for natural history publications.</p><p>However, J. Sera, one of the first published illustrators of the eastern spadefoot, was able to portray this elusive toad with a distinctive expressiveness that makes this toad an endearing subject. This illustration was published as a hand-colored lithograph in <a href="{{ '/mlis/spadefoot/thelibrary' | relative_url }}"><em>North American herpetology</em></a> by John Edwards Holbrook (1836). Explore this site to learn more about this striking lithograph and the history of the depiction of the eastern spadefoot.</p>
+
+  <div id="chi-home-middle" class="chi-home-text">
+  <p>The <strong>eastern spadefoot</strong> (formerly <em>Scaphiopus solitarius</em>) is a toad that lives most of its life underground and only comes out at night. This posed a problem in the early years of North American herpetology (the study of amphibians and reptiles), as specimens would have to be captured and illustrated by hand.</p>
+  <p>However, J. Sera, one of the first published illustrators of the eastern spadefoot, was able to portray this elusive toad with a distinctive expressiveness that makes this toad an endearing subject. This illustration was published as a hand-colored lithograph in <a href="{{ '/mlis/spadefoot/thelibrary' | relative_url }}"><em>North American herpetology</em></a> by John Edwards Holbrook (1836).</p>
   </div>
+
+  <div id="chi-home-bottom" class="chi-home-image">
+    <div class="chi-home-header">explore this site to learn more about this striking <a href="{{ "/mlis/spadefoot/thelithograph" | relative_url }}">lithograph</a> and the history of the depiction of the <a href="{{ "/mlis/spadefoot/thetoad" | relative_url }}">eastern spadefoot</a></div>
+    <img class="chi-home-square" src="{{ 'mlis/spadefoot/images/chi_square_bottom.png' | relative_url }}">
+  </div>
+
 </div>
