--- a/mlis/spadefoot/names.html
+++ b/mlis/spadefoot/names.html
@@ -1,10 +1,14 @@
 ---
-layout: toad
+layout: chi-toad
 title: names
 permalink: /mlis/spadefoot/names
 ---
 <p id="infographic-header">Explore the many names of the eastern spadefoot from its first documentation up to its current status.</p>
-<img id="infographic" src="{{ "/mlis/spadefoot/images/eastern_spadefoot_2.png" | relative_url }}"/>
+
+<a id="infographic" href="{{ '/mlis/spadefoot/images/eastern_spadefoot_2.png' | relative_url }}">
+<img src="{{ '/mlis/spadefoot/images/eastern_spadefoot_2.png' | relative_url }}"/>
+</a>
+
 <div id="infographic-footer">
 <p><strong>1st Photo:</strong> <a href="http://www.lewis-clark.org/article/2751">Discovering Lewis & Clark</a> ● <strong>2nd Photo:</strong> <a href="https://biodiversitylibrary.org/page/35765112">Biodiveristy Heritage Library</a> ● <strong>3rd Photo:</strong> <a href="https://biodiversitylibrary.org/page/2001793">Biodiversity Heritage Library</a> ● <strong>4th Photo:</strong> <a href="https://biodiversitylibrary.org/page/31895970">Biodiversity Heritage Library</a> ● <strong>5th Photo:</strong> <a href="https://www.semanticscholar.org/paper/Remarking-on-a-blackened-eye%3A-Persifor-Frazer's-of-Brinkman/9d2745dcd1dbde6e1e681285ea1d5bae45277fa0">Semantic Scholar</a> ● <strong>6th Photo:</strong> <a href="https://archive.org/details/b21779405_0003/page/162">Wellcome Library</a> ● <strong>7th Photo:</strong> <a href="https://biodiversitylibrary.org/page/6221528">Biodiversity Heritage Library</a> ● <strong>8th Photo:</strong> <a href="https://www.inaturalist.org/observations/24793788">iNaturalist</a></p>
 <p>For more information on the sources of the spadefoot faces see: <a href="{{ '/mlis/spadefoot/faces' | relative_url }}">Views</a></p>
