--- a/mlis/spadefoot/faces.html
+++ b/mlis/spadefoot/faces.html
@@ -1,5 +1,5 @@
 ---
-layout: toad
+layout: chi-toad
 title: faces
 permalink: /mlis/spadefoot/faces
 ---
@@ -8,37 +8,48 @@ permalink: /mlis/spadefoot/faces
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="{{ '/assets/js/zoom.js' | relative_url }}"></script>
-<script>
-$( function() {
-  $( "#tabs" ).tabs();
-});
-$(document).ready(function(){
+
+<div id="faces" class="tabs-large">
+  <script>
+    $( function() {
+      $( "#tabs" ).tabs();
+    });
+    $(document).ready(function(){
 			$('#solitarius').zoom( { on:'click' });
       $('#hermit').zoom( { on:'click' });
       $('#solitare').zoom( { on:'click' });
       $('#solitary').zoom( { on:'click' });
       $('#holbrook').zoom( { on:'click' });
       $('#eastern').zoom( { on:'click'});
-});
-</script>
+    });
+  </script>
+
+  <p id="tabs-large-intro">Take a look at the depictions of the Eastern Spadefoot toad from J. Sera's lithography to some of the first photographs of the toad published.</p>
 
   <div id="tabs">
+
   <ul>
-    <li><a href="#tabs-1"><em>Scaphiopus solitarius</em></a></li>
+    <li><a href="#tabs-1">Scaphiopus <em>solitarius</em></a></li>
     <li><a href="#tabs-2">Hermit Spade-foot</a></li>
-    <li><a href="#tabs-3"><em>Scaphiope solitare</em></a></li>
+    <li><a href="#tabs-3">Scaphiope <em>solitare</em></a></li>
     <li><a href="#tabs-4">Solitary Frog</a></li>
     <li><a href="#tabs-5">Holbrook's Spadefoot</a></li>
     <li><a href="#tabs-6">Eastern Spadefoot</a></li>
   </ul>
 
   <div class="lith-tab" id="tabs-1">
+    <div class="view-small">
+      <h3>Scaphiopus solitarius</h3>
+      <p><em>Click Image to Zoom</em></p>
+    </div>
     <div class="zoom" id="solitarius">
       <img src="{{ '/mlis/spadefoot/images/holb_smith_01.jpg' | relative_url }}" width="400px" alt="Smithsonian First Edition" />
     </div>
     <div class="lith-view">
-      <h3>Scaphiopus solitarius</h3>
-      <p><em>Click Image to Zoom</em></p>
+      <div class="view-large">
+        <h3>Scaphiopus solitarius</h3>
+        <p><em>Click Image to Zoom</em></p>
+      </div>
       <p><strong>Image ID: </strong><a href="https://flic.kr/p/adgCKt">https://flic.kr/p/adgCKt</a></p>
       <p><strong>View Description:</strong> A scanned copy of the Scaphiopus solitarius lithograph from the first edition of <em>North American Herpetology</em> by John Edwards Holbrook, published in 1836. This particular scan comes from a copy held by the Smithsonian and is presented here through the Biodiversity Heritage Library's <a href="https://flic.kr/p/adgCKt">Flickr</a>.
       </p>
@@ -50,12 +61,18 @@ $(document).ready(function(){
   </div>
 
   <div class="lith-tab" id="tabs-2">
+    <div class="view-small">
+      <h3>Hermit Spade-foot</h3>
+      <p><em>Click Image to Zoom</em></p>
+    </div>
     <div class="zoom" id="hermit">
       <img src="{{ '/mlis/spadefoot/images/hermit_spadefoot.jpg' | relative_url }}" width="400px" alt="Hermit Spade-foot" />
     </div>
     <div class="lith-view">
-      <h3>Hermit Spade-foot</h3>
-      <p><em>Click Image to Zoom</em></p>
+      <div class="view-large">
+        <h3>Hermit Spade-foot</h3>
+        <p><em>Click Image to Zoom</em></p>
+      </div>
       <p><strong>Image ID:</strong> <a href="https://www.archive.org/download/zoologyofnewyork03adeka/page/n50_w449">https://www.archive.org/download/zoologyofnewyork03adeka/page/n50_w449</a></p>
       <p><strong>View Description:</strong> A scanned copy of plate 19 from <em>Zoology of New York</em> by De Kay, published in 1842. The "Hermit Spade-foot" is the middle figure (Fig. 47) on the plate. This particular scan comes from a copy held by the <a href="http://www.mblwhoilibrary.org/">Marine Biological Laboratory (MBL) and Woods Hole Oceanographic Institution (WHOI) Library</a>.</p>
       <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
@@ -66,12 +83,18 @@ $(document).ready(function(){
   </div>
 
   <div class="lith-tab" id="tabs-3">
+    <div class="view-small">
+      <h3>Scaphiope solitare</h3>
+      <p><em>Click Image to Zoom</em></p>
+    </div>
     <div class="zoom" id="solitare">
       <img src="{{ '/mlis/spadefoot/images/solitare.jpg' | relative_url }}" width="400px" alt="Scaphiope solitare"/>
     </div>
     <div class="lith-view">
-      <h3>Scaphiope solitare</h3>
-      <p><em>Click Image to Zoom</em></p>
+      <div class="view-large">
+        <h3>Scaphiope solitare</h3>
+        <p><em>Click Image to Zoom</em></p>
+      </div>
       <p><strong>Image ID:</strong> <a href="https://www.archive.org/download/erptologiegn00dum/page/n248_w345">https://www.archive.org/download/erptologiegn00dum/page/n248_w345</a></p>
       <p><strong>View Description:</strong>  A scanned copy of a plate 97 from <em>Erpétologie générale, ou, Histoire naturelle complète des reptiles.</em> by C. Duméril, published in 1854. It features an illustration of the dorsal view of a "Scaphiope solitare" along with sketches of its hind feet and mouth. This particular scan comes from a copy held by the Smithsonian.</p>
       <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
@@ -82,12 +105,18 @@ $(document).ready(function(){
   </div>
 
   <div class="lith-tab" id="tabs-4">
+    <div class="view-small">
+      <h3>Solitary Frog</h3>
+      <p><em>Click Image to Zoom</em></p>
+    </div>
     <div class="zoom" id="solitary">
       <img src="{{ '/mlis/spadefoot/images/solitary.jpg' | relative_url }}" width="400px" alt="Solitary Frog">
     </div>
     <div class="lith-view">
-      <h3>Solitary Frog</h3>
-      <p><em>Click Image to Zoom</em></p>
+      <div class="view-large">
+        <h3>Solitary Frog</h3>
+        <p><em>Click Image to Zoom</em></p>
+      </div>
       <p><strong>Image ID:</strong> b21779405_0003_0173.jpg</p>
       <p><strong>View Description:</strong> A scanned copy of an illustration of a "Solitary Frog" from <em>The Illustrated Natural history</em> by J. G. Wood, published in 1869. This particular scan was digitized by the <a href="https://wellcomelibrary.org/">Wellcome Library</a>.</p>
       <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
@@ -98,12 +127,18 @@ $(document).ready(function(){
   </div>
 
   <div class="lith-tab" id="tabs-5">
+    <div class="view-small">
+      <h3>Holbrook's Spadefoot</h3>
+      <p><em>Click Image to Zoom</em></p>
+    </div>
     <div class="zoom" id="holbrook">
       <img src="{{ '/mlis/spadefoot/images/holbrook.jpg' | relative_url }}" width="400px" alt="Holbrook's spadefoot"/>
     </div>
     <div class="lith-view">
-      <h3>Holbrook's Spadefoot</h3>
-      <p><em>Click Image to Zoom</em></p>
+      <div class="view-large">
+        <h3>Holbrook's Spadefoot</h3>
+        <p><em>Click Image to Zoom</em></p>
+      </div>
       <p><strong>Image ID:</strong> <a href="https://www.archive.org/download/handbookoffrogst00wrig/page/n57_w390">https://www.archive.org/download/handbookoffrogst00wrig/page/n57_w390</a></p>
       <p><strong>View Description:</strong> A scanned copy of the Holbrook's Spadefoot page from <em>Handbook of frogs and toads</em> by A. A. Wright and A. H. Wright, published in 1933. This particular scan comes from a copy held by the <a href="http://www.mblwhoilibrary.org/">Marine Biological Laboratory (MBL) and Woods Hole Oceanographic Institution (WHOI) Library</a>.</p>
       <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
@@ -114,12 +149,18 @@ $(document).ready(function(){
   </div>
 
   <div class="lith-tab" id="tabs-6">
+    <div class="view-small">
+      <h3>Eastern Spadefoot</h3>
+      <p><em>Click Image to Zoom</em></p>
+    </div>
     <div class="zoom" id="eastern">
       <img src="{{ '/mlis/spadefoot/images/eastern.jpg' | relative_url }}" width="400px" alt="eastern spadefoot observation by floridensis on iNaturalist.org"/>
     </div>
     <div class="lith-view">
-      <h3>Eastern Spadefoot</h3>
-      <p><em>Click Image to Zoom</em></p>
+      <div class="view-large">
+        <h3>Eastern Spadefoot</h3>
+        <p><em>Click Image to Zoom</em></p>
+      </div>
       <p><strong>Image ID:</strong> <a href="https://static.inaturalist.org/photos/38344828/original.jpg?1557337947">https://static.inaturalist.org/photos/38344828/original.jpg?1557337947</a></p>
       <p><strong>View Description:</strong>  An image uploaded to <a href="https://www.inaturalist.org">iNaturalist</a> of an eastern spadefoot (<em>Scaphiopus holbrookii</em>) taken by iNaturalist user <a href="https://www.inaturalist.org/people/floridensis">floridensis</a>. This image is associated with an observation floridensis made of the eastern spadefoot in Volusia County, Florida on May 20, 2015.</p>
       <p><strong>View Type:</strong> three-quarter view [AAT: <a href="http://vocab.getty.edu/page/aat/300117363">300117363</a>]</p>
@@ -129,3 +170,143 @@ $(document).ready(function(){
   </div>
 
   </div>
+</div>
+
+<div class="accordion-small">
+
+  <script>
+    $( function() {
+      $( "#accordion" ).accordion({
+        collapsible: true,
+        heightStyle: "content",
+        active: 0
+      });
+    } );
+    $(document).ready(function(){
+			$('#holb-01').zoom( { on:'click' });
+      $('#hermit-01').zoom( { on:'click' });
+      $('#solitare-01').zoom( { on:'click' });
+      $('#solitary-frog').zoom( { on:'click' });
+      $('#holbrook-02').zoom( { on:'click' });
+      $('#eastern-01').zoom( { on:'click'});
+    });
+  </script>
+
+  <div id="accordion">
+
+  <h3>The Many Faces of the Eastern Spadefoot</h3>
+  <div>
+    <p>Take a look at the depictions of the Eastern Spadefoot toad from J. Sera's lithography to some of the first photographs of the toad published.</p>
+  </div>
+
+  <h3>Scaphiopus <em>solitarius</em></h3>
+  <div class="lith-acc">
+    <div class="acc-view">
+      <p><em>Click Image to Zoom</em></p>
+    </div>
+    <div class="zoom" id="holb-01">
+      <img src="{{ '/mlis/spadefoot/images/holb_smith_01.jpg' | relative_url }}" width="400px" alt="Smithsonian First Edition" />
+    </div>
+    <div>
+      <p><strong>Image ID: </strong><a href="https://flic.kr/p/adgCKt">https://flic.kr/p/adgCKt</a></p>
+      <p><strong>View Description:</strong> A scanned copy of the Scaphiopus solitarius lithograph from the first edition of <em>North American Herpetology</em> by John Edwards Holbrook, published in 1836. This particular scan comes from a copy held by the Smithsonian and is presented here through the Biodiversity Heritage Library's <a href="https://flic.kr/p/adgCKt">Flickr</a>.
+      </p>
+      <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
+      <p><strong>View Date:</strong> 08/15/2011</p>
+      <p><strong>Related Work:</strong> Scaphiopus solitarius; J. Sera illustrator; 1836; Philadelphia, Pennsylvania (United States) – <a href="{{ '/mlis/spadefoot/workrecord' | relative_url }}">KSU:012</a></p>
+      <p><strong>Source:</strong> <a href="https://biodiversitylibrary.org/page/35765112">https://biodiversitylibrary.org/page/35765112</a></p>
+    </div>
+  </div>
+
+  <h3>Hermit Spade-foot</h3>
+  <div class="lith-acc">
+    <div class="acc-view">
+      <p><em>Click Image to Zoom</em></p>
+    </div>
+    <div class="zoom" id="hermit-01">
+      <img src="{{ '/mlis/spadefoot/images/hermit_spadefoot.jpg' | relative_url }}" width="400px" alt="Hermit Spade-foot" />
+    </div>
+    <div>
+      <p><strong>Image ID:</strong> <a href="https://www.archive.org/download/zoologyofnewyork03adeka/page/n50_w449">https://www.archive.org/download/zoologyofnewyork03adeka/page/n50_w449</a></p>
+      <p><strong>View Description:</strong> A scanned copy of plate 19 from <em>Zoology of New York</em> by De Kay, published in 1842. The "Hermit Spade-foot" is the middle figure (Fig. 47) on the plate. This particular scan comes from a copy held by the <a href="http://www.mblwhoilibrary.org/">Marine Biological Laboratory (MBL) and Woods Hole Oceanographic Institution (WHOI) Library</a>.</p>
+      <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
+      <p><strong>View Date:</strong> 12/17/2007</p>
+      <p><strong>Related Work:</strong> De Kay, James E. 1842. Zoology of New York; or, The New York Fauna. Part 3, Reptiles-Plates. Albany, NY: W. & A. White & J. Visscher: Carroll and Cook.</p>
+      <p><strong>Source:</strong> <a href="https://biodiversitylibrary.org/page/2001793">https://biodiversitylibrary.org/page/2001793</a></p>
+    </div>
+  </div>
+
+  <h3>Scaphiope <em>solitare</em></h3>
+  <div class="lith-acc">
+    <div class="acc-view">
+      <p><em>Click Image to Zoom</em></p>
+    </div>
+    <div class="zoom" id="solitare-01">
+      <img src="{{ '/mlis/spadefoot/images/solitare.jpg' | relative_url }}" width="400px" alt="Scaphiope solitare"/>
+    </div>
+    <div>
+      <p><strong>Image ID:</strong> <a href="https://www.archive.org/download/erptologiegn00dum/page/n248_w345">https://www.archive.org/download/erptologiegn00dum/page/n248_w345</a></p>
+      <p><strong>View Description:</strong>  A scanned copy of a plate 97 from <em>Erpétologie générale, ou, Histoire naturelle complète des reptiles.</em> by C. Duméril, published in 1854. It features an illustration of the dorsal view of a "Scaphiope solitare" along with sketches of its hind feet and mouth. This particular scan comes from a copy held by the Smithsonian.</p>
+      <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
+      <p><strong>View Date:</strong> 07/29/2010</p>
+      <p><strong>Related Work:</strong> Duméril, C. 1854. <em>Erpétologie générale, ou, Histoire naturelle complète des reptiles.</em> Paris: Roret.</p>
+      <p><strong>Source:</strong> <a href="https://biodiversitylibrary.org/page/31895970">https://biodiversitylibrary.org/page/31895970</a></p>
+    </div>
+  </div>
+
+  <h3>Solitary Frog</h3>
+  <div class="lith-acc">
+    <div class="acc-view">
+      <p><em>Click Image to Zoom</em></p>
+    </div>
+    <div class="zoom" id="solitary-frog">
+      <img src="{{ '/mlis/spadefoot/images/solitary.jpg' | relative_url }}" width="400px" alt="Solitary Frog">
+    </div>
+    <div>
+      <p><strong>Image ID:</strong> b21779405_0003_0173.jpg</p>
+      <p><strong>View Description:</strong> A scanned copy of an illustration of a "Solitary Frog" from <em>The Illustrated Natural history</em> by J. G. Wood, published in 1869. This particular scan was digitized by the <a href="https://wellcomelibrary.org/">Wellcome Library</a>.</p>
+      <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
+      <p><strong>View Date:</strong> 02/19/2015</p>
+      <p><strong>Related Work:</strong> Wood, J. G. 1869. The Illustrated Natural History. New York: Routledge.</p>
+      <p><strong>Source:</strong> <a href="https://archive.org/details/b21779405_0003/page/162">https://archive.org/details/b21779405_0003/page/162</a></p>
+    </div>
+  </div>
+
+  <h3>Holbrook's Spadefoot</h3>
+  <div class="lith-acc">
+    <div class="acc-view">
+      <p><em>Click Image to Zoom</em></p>
+    </div>
+    <div class="zoom" id="holbrook-02">
+      <img src="{{ '/mlis/spadefoot/images/holbrook.jpg' | relative_url }}" width="400px" alt="Holbrook's spadefoot"/>
+    </div>
+    <div>
+      <p><strong>Image ID:</strong> <a href="https://www.archive.org/download/handbookoffrogst00wrig/page/n57_w390">https://www.archive.org/download/handbookoffrogst00wrig/page/n57_w390</a></p>
+      <p><strong>View Description:</strong> A scanned copy of the Holbrook's Spadefoot page from <em>Handbook of frogs and toads</em> by A. A. Wright and A. H. Wright, published in 1933. This particular scan comes from a copy held by the <a href="http://www.mblwhoilibrary.org/">Marine Biological Laboratory (MBL) and Woods Hole Oceanographic Institution (WHOI) Library</a>.</p>
+      <p><strong>View Type:</strong> front view [AAT: <a href="http://vocab.getty.edu/page/aat/300264744">300264744</a>]</p>
+      <p><strong>View Date:</strong> 06/11/2008</p>
+      <p><strong>Related Work:</strong> Wright, A. A. & Wright, A. H. 1933. Handbook of Frogs and Toads. Ithaca, N.Y.: Comstock Pub. Co.</p>
+      <p><strong>Source:</strong> <a href="https://biodiversitylibrary.org/page/6221528">https://biodiversitylibrary.org/page/6221528</a></p>
+    </div>
+  </div>
+
+  <h3>Eastern Spadefoot</h3>
+  <div class="lith-acc">
+    <div class="acc-view">
+      <p><em>Click Image to Zoom</em></p>
+    </div>
+    <div class="zoom" id="eastern-01">
+      <img src="{{ '/mlis/spadefoot/images/eastern.jpg' | relative_url }}" width="400px" alt="eastern spadefoot observation by floridensis on iNaturalist.org"/>
+    </div>
+    <div>
+      <p><strong>Image ID:</strong> <a href="https://static.inaturalist.org/photos/38344828/original.jpg?1557337947">https://static.inaturalist.org/photos/38344828/original.jpg?1557337947</a></p>
+      <p><strong>View Description:</strong>  An image uploaded to <a href="https://www.inaturalist.org">iNaturalist</a> of an eastern spadefoot (<em>Scaphiopus holbrookii</em>) taken by iNaturalist user <a href="https://www.inaturalist.org/people/floridensis">floridensis</a>. This image is associated with an observation floridensis made of the eastern spadefoot in Volusia County, Florida on May 20, 2015.</p>
+      <p><strong>View Type:</strong> three-quarter view [AAT: <a href="http://vocab.getty.edu/page/aat/300117363">300117363</a>]</p>
+      <p><strong>View Date:</strong> 05/08/2019</p>
+      <p><strong>Source:</strong> <a href="https://www.inaturalist.org/observations/24793788">https://www.inaturalist.org/observations/24793788</a></p>
+    </div>
+  </div>
+
+  </div>
+
+</div>
