Metadata Schema Update

--- a/mlis/metadata/home.html
+++ b/mlis/metadata/home.html
@@ -4,6 +4,8 @@ title: Secondhand CDs
 permalink: /mlis/metadata/home
 ---
 <div id="scd-home">
-<img src="{{ '/scd/images/scd_20191125_017.jpg' | relative_url }}"/>
-<p>Secondhand CDs (abbreviated scd), is a metadata schema for describing a personal collection of CDs purchased from secondhand and thrift stores from across the country, primarily in Ohio. These CDs primarily consist of self-published and small studio albums. Many have been published in the region they were purchased, such as the Mahoning Valley Button Box Club’s “Everyone’s Choice - IV,” and thus provide insight into places I’ve visited or moved to. Others have come from around the world, bringing to mind questions that can’t be answered but are nonetheless intriguing, such as “Who originally bought these?” and “How did they end up here?”</p>
+  <img src="{{ '/scd/images/scd_20191125_017.jpg' | relative_url }}"/>
+  <div>
+    <p>Secondhand CDs (abbreviated scd), is a metadata schema for describing a personal collection of CDs purchased from secondhand and thrift stores from across the country, primarily in Ohio. These CDs primarily consist of self-published and small studio albums. Many have been published in the region they were purchased, such as the Mahoning Valley Button Box Club’s “Everyone’s Choice - IV,” and thus provide insight into places I’ve visited or moved to. Others have come from around the world, bringing to mind questions that can’t be answered but are nonetheless intriguing, such as “Who originally bought these?” and “How did they end up here?”</p>
+  </div>
 </div>
