--- a/scd/schema/album/track/trackartistname.html
+++ b/scd/schema/album/track/trackartistname.html
@@ -9,7 +9,7 @@ scd-imp: Mandatory if using trackArtist
 <tr>
   <td>Value Control</td>
   <td>
-    <p>Inverted form.</p>
-    <p>Use the same form of the artist's name as recorded in <a href="{{ '/scd/musicartist' | relative_url }}">musicArtist</a>.</p>
+    <p>Inverted form</p>
+    <p>Use the same form of the artist's name as recorded in <a href="{{ '/scd/musicartistname' | relative_url }}">1.6.1.1 musicArtistName</a>.</p>
   </td>
 </tr>
