--- a/scd/schema/album/track/trackartistrole.html
+++ b/scd/schema/album/track/trackartistrole.html
@@ -8,7 +8,7 @@ scd-imp: Optional, Repeatable
 ---
 <tr>
   <td>Comment</td>
-  <td>The role may or might not be listed on the CD packaging. If the specific role isn’t listed in reference to a specific track DO NOT use the artist role(s) listed in <a href="{{ '/scd/musicartistrole' | relative_url }}">musicArtistRole</a>. For example, an artist may be listed as an accordion player for the album overall but only specifically listed as a vocalist for the track, thus “accordion” should not be listed as a role under <em>trackArtistRole</em>.</td>
+  <td>The role may or might not be listed on the CD packaging. If the specific role isn’t listed in reference to a specific track DO NOT use the artist role(s) listed in <a href="{{ '/scd/musicartistrole' | relative_url }}">1.6.1.3 musicArtistRole</a>. For example, an artist may be listed as an accordion player for the album overall but only specifically listed as a vocalist for the track, thus “accordion” should not be listed as a role under <em>trackArtistRole</em>.</td>
 </tr>
 <tr>
   <td>Value Control</td>
