--- a/scd/schema/album/track/trackaudiourl.html
+++ b/scd/schema/album/track/trackaudiourl.html
@@ -8,7 +8,7 @@ scd-imp: Optional, Repeatable
 ---
 <tr>
   <td>Comment</td>
-  <td>If it exists, record the original URL as listed on the CD packaging (or its Wayback Machine equivalent – see <a href="{{ '/mlis/metadata/schema#appendix-c' | relative_url }}">Appendix C</a>) and indicate its availability with the “status” XML attribute. If applicable, record any current URLs for the track’s audio such as official websites not associated with the original URL, a Youtube video of the track audio, or a Bandcamp entry. Indicate whether the URL is the original URL, a new official URL, a streaming URL, or a different type of source with the “type” XML attribute.</td>
+  <td>If it exists, record the original URL as listed on the CD packaging (or its Wayback Machine equivalent – see <a href="{{ '/mlis/metadata/schema#appendix-c' | relative_url }}">Appendix C</a>) and indicate its availability with the “status” XML attribute. If applicable, record any current URLs for the track’s audio such as official websites not associated with the original URL, a YouTube video of the track audio, or a Bandcamp entry. Indicate whether the URL is the original URL, a new official URL, a streaming URL, or a different type of source with the “type” XML attribute.</td>
 </tr>
 <tr>
   <td>Value Control</td>
@@ -24,5 +24,11 @@ scd-imp: Optional, Repeatable
 </tr>
 <tr>
   <td>Example</td>
-  <td>{% highlight xml %}<trackAudioURL type=”streaming” status=”live”>https://youtu.be/WrcCLgmhEJk</trackAudioURL>{% endhighlight %}</td>
+  <td>
+{% highlight xml %}
+<trackAudioURL type=”streaming” status=”live”>
+  https://youtu.be/WrcCLgmhEJk
+</trackAudioURL>
+{% endhighlight %}
+  </td>
 </tr>
