--- a/scd/schema/appearance/imageurl.html
+++ b/scd/schema/appearance/imageurl.html
@@ -14,3 +14,13 @@ scd-imp: Optional
   <td>Value Control</td>
   <td>Full URL address</td>
 </tr>
+<tr>
+  <td>Example</td>
+  <td>
+{% highlight xml %}
+<imageURL>
+https://krogersst.github.io/scd/images/scd_20191125_001.jpg
+</imageURL>
+{% endhighlight %}
+  </td>
+</tr>
