--- a/scd/schema/artist/musicartistclass.html
+++ b/scd/schema/artist/musicartistclass.html
@@ -4,7 +4,7 @@ title: 1.6.1.2 musicArtistClass
 permalink: /scd/musicartistclass
 scd-label: Music Artist Class
 scd-def: The class of artist in relation to the creation and recording of the album.
-scd-imp: Mandatory if using musicArtist; Repeatable
+scd-imp: Mandatory if using musicArtist, Repeatable
 ---
 <tr>
   <td>Value Control</td>
