--- a/scd/schema/artist/musicartisturl.html
+++ b/scd/schema/artist/musicartisturl.html
@@ -24,5 +24,11 @@ scd-imp: Optional, Repeatable
 </tr>
 <tr>
   <td>Example</td>
-  <td>{% highlight xml %}<musicArtistURL status=”wayback” type=”original”>https://web.archive.org/web/20080404105040/members.aol.com/harmiii/ihw.html</musicArtistURL>{% endhighlight %}</td>
+  <td>
+{% highlight xml %}
+<musicArtistURL status=”wayback” type=”original”>
+  https://web.archive.org/web/20080404105040/members.aol.com/harmiii/ihw.html
+</musicArtistURL>
+{% endhighlight %}
+  </td>
 </tr>
