--- a/scd/schema/contributor/contributorurl.html
+++ b/scd/schema/contributor/contributorurl.html
@@ -24,5 +24,11 @@ scd-imp: Optional, Repeatable
 </tr>
 <tr>
   <td>Example</td>
-  <td>{% highlight xml %}<contributorURL type=”other“ status=”live”>https://tapeop.com/interviews/116/gary-rhamy-bonus/</contributorURL>{% endhighlight %}</td>
+  <td>
+{% highlight xml %}
+<contributorURL type=”other“ status=”live”>
+  https://tapeop.com/interviews/116/gary-rhamy-bonus/
+</contributorURL>
+{% endhighlight %}
+  </td>
 </tr>
