--- a/scd/schema/group/musicgroupurl.html
+++ b/scd/schema/group/musicgroupurl.html
@@ -27,5 +27,11 @@ scd-imp: Optional, Repeatable
 </tr>
 <tr>
   <td>Example</td>
-  <td>{% highlight xml %}<musicGroupURL status=”wayback” type=”original”>http://web.archive.org/web/20160308212601/http://lukeysboat.com/</musicGroupURL>{% endhighlight %}</td>
+  <td>
+{% highlight xml %}
+<musicGroupURL status=”wayback” type=”original”>
+  http://web.archive.org/web/20160308212601/http://lukeysboat.com/
+</musicGroupURL>
+{% endhighlight %}
+  </td>
 </tr>
