--- a/scd/schema/group/musicgrouplocation.html
+++ b/scd/schema/group/musicgrouplocation.html
@@ -14,6 +14,6 @@ scd-imp: Optional
   <td>Value Control</td>
   <td>
     <p>Street, City, State Zip Code</p>
-    <p>If exact address is unknown, use the Getty Thesaurus of Geographic Names preferred name (if available) at <a href="www.getty.edu/research/tools/vocabularies/tgn/">www.getty.edu/research/tools/vocabularies/tgn/</a></p> 
+    <p>If exact address is unknown, use the Getty Thesaurus of Geographic Names preferred name (if available) at <a href="https://www.getty.edu/research/tools/vocabularies/tgn/">www.getty.edu/research/tools/vocabularies/tgn/</a></p> 
   </td>
 </tr>
