--- a/scd/schema/locationpurchased.html
+++ b/scd/schema/locationpurchased.html
@@ -10,7 +10,7 @@ scd-imp: Optional
   <td>Value Control</td>
   <td>
     <p>Store Name, Street, City, State Zip Code</p>
-    <p>If exact store/address unknown, record the location to the most specific location known (city or state) using the Getty Thesaurus of Geographic Names preffered name (if available) at <a href="www.getty.edu/research/tools/vocabularies/tgn/">www.getty.edu/research/tools/vocabularies/tgn/</a></p>
+    <p>If exact store/address unknown, record the location to the most specific location known (city or state) using the Getty Thesaurus of Geographic Names preferred name (if available) at <a href="https://www.getty.edu/research/tools/vocabularies/tgn/">www.getty.edu/research/tools/vocabularies/tgn/</a></p>
     </td>
 </tr>
 <tr>
