PDF Update and Element Standardization

--- a/scd/schema/album/albumgenre.html
+++ b/scd/schema/album/albumgenre.html
@@ -4,7 +4,7 @@ title: 1.4.2 albumGenre
 permalink: /scd/albumgenre
 scd-label: Album Genre
 scd-def: The genre(s) of the album.
-scd-imp: Optional; Repeatable
+scd-imp: Optional, Repeatable
 ---
 <tr>
   <td>Comment</td>
