--- a/scd/schema/appearance/image.html
+++ b/scd/schema/appearance/image.html
@@ -4,7 +4,7 @@ title: 1.8.4 image
 permalink: /scd/image
 scd-label: Image
 scd-def: The container element for elements describing the images of the disc and packaging.
-scd-imp: Repeatable
+scd-imp: Optional, Repeatable
 ---
 <tr>
   <td>Comment</td>
