--- a/scd/schema/appearance/imageidentifier.html
+++ b/scd/schema/appearance/imageidentifier.html
@@ -4,7 +4,7 @@ title: 1.8.4.1 imageID
 permalink: /scd/imageIdentifier
 scd-label: Image Identifier
 scd-def: An unambiguous reference to the image.
-scd-imp: Mandatory within image container element.
+scd-imp: Mandatory within image container element
 ---
 <tr>
   <td>Comment</td>
